--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,21 +3,7 @@
 	<head>
 		<title>{{ page.title }}</title>
 		<link rel="stylesheet" href="./css/bootstrap.min.css">
-		<script type="text/javascript">
-
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-15660185-3']);
-		  _gaq.push(['_setDomainName', 'rednesstech.com']);
-		  _gaq.push(['_setAllowLinker', true]);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-
-		</script>
+		{% include ga.html %}
 		<style type="text/css">
 			body {
 			padding-top: 20px;
